--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -71,7 +71,7 @@ blockquote p {
 }
 
 .col-md-9 img {
-    margin: 15px auto 15px auto;
+    margin: 5px auto 15px auto;
 }
 
 img.right {
@@ -82,4 +82,8 @@ img.right {
 img.elf_avatar {
     float: right; 
     margin: 10px 0px 15px 25px;
+}
+
+.admonition {
+    margin-top: 20px;
 }
