--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -43,6 +43,9 @@
     .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover, .navbar-default .navbar-nav .open .dropdown-menu>li>a:focus {
         background-color: #bb2c21;
     }
+    .navbar-default .navbar-nav .open .dropdown-menu>.active>a, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus {
+        background-color: #bb2c21;
+    }
 }
 
 .dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {
