--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -100,3 +100,22 @@ img.elf_avatar {
     text-decoration: underline;
     color: #3a87ad;
 }
+
+.video-wrapper {
+    position: relative;
+    display: block;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+    padding-bottom: 56.25%;
+}
+
+.video-wrapper > iframe {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
